# emcommon

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt  scratchpad  setup.cfg
src/emcommon/: .pylintrc  common.py  items.py  regions.py  systems.py  universe.py
src/emcommon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_items.py  test_regions.py  test_systems.py  test_universe.py
