[metadata]
name = emcommon
version = 0.0.7
author = Nathan Spiegel
author_email = nathan@zswap.net
description = A collection of functions for common EM operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.zswap.net/em/emcommon
project_urls =
    Bug Tracker = https://git.zswap.net/em/emcommon/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    redis

[options.packages.find]
where = src