[metadata]
name = emcommon
version = 0.1.2
author = Nathan Spiegel
author_email = nathan@zswap.net
description = A collection of functions for common EM operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/znathanss/emcommon
project_urls =
    Bug Tracker = https://github.com/znathanss/emcommon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = 
    requests
    redis
    future-fstrings

[options.packages.find]
where = src

[tool:pytest]
norecursedirs =
    dist
    build
    .tox
testpaths = tests
markers =
    only: for debugging purposes, a single, failing, test can be required to run
    slow: mark tests as slow (deselect with '-m "not slow"')
    system: mark system tests
    original_logger: do not isolate logger in specific tests
    no_fake_config_dir: avoid the autofixture fake_config_dir to take effect
    requires_src: tests that require the raw source of PyScaffold and assume our default CI environment
log_level = DEBUG
log_cli = True
log_cli_level = CRITICAL
junit_family = xunit2